# Financial-Risk-Assessment-Reporting

./: .env.example  README.md  d3.py  pyproject.toml  requirements.txt  ui.py
agents/: agent.py  esg_reporting.py  kg_input.py  knowledge_graph.py  main.py  risk_reporter.py
prompts_library/: prompt.py
tools/: financial_year.py  google_search.py
