[project]
name = "fin-risk-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"  # ⚠️ FIX: 3.13 is too new, most libraries not ready
dependencies = [
    "backoff>=2.2.1",
    "python-dotenv>=1.0.1", # ✅ CORRECT name on PyPI is python-dotenv, not dotenv
    "fastapi>=0.116.1",
    "google-genai>=1.25.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.7",
    "langgraph>=0.5.2",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "streamlit>=1.47.0",
    "streamlit-chat>=0.1.1",
    "streamlit-searchbox>=0.1.22",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]

[tool.setuptools]
packages = ["agents", "client", "tools", "prompts_library"]
